zkay/examples/type_errors/ReadUnreadable.zkay
pragma zkay >=0.2.0;

contract ReadUnreadable {
    final address business;

    constructor() public {
        business = me;
    }

    function give_receipt() public {
        uint@business a = 1;
        uint@business b = 2;
        bool c = a == b;
    }
}
